<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <PreferenceCategory
        android:title="@string/title_setting_head">
        <CheckBoxPreference
            android:key="@string/pref_vibration"
            android:title="@string/title_vibration"
            android:summary="@string/title_vibration_description"
            android:defaultValue="true" />
        <EditTextPreference
            android:key="@string/pref_current_count"
            android:title="@string/title_change_current"
            android:inputType="number"
            android:defaultValue="0" />

        <EditTextPreference
            android:key="@string/pref_total_count"
            android:title="@string/title_total_count"
            android:inputType="number"
            android:defaultValue="0" />

        <EditTextPreference
            android:key="@string/pref_name"
            android:title="@string/title_change_default_name"
            android:defaultValue="@string/title_default_name" />
    </PreferenceCategory>
</PreferenceScreen>